# uptime-bot-little

./: .gitignore  README.md  devenv.nix  pyproject.toml
app/: __main__.py  defaults.py
app/libs/: bot.py  format.py  logger.py
